--- a/src/components/Article/ListArticle/style.scss
+++ b/src/components/Article/ListArticle/style.scss
@@ -53,25 +53,27 @@
           
         font-size: 1.3rem;
         }
+      }
 
-    }
-    &--description {
+        
+    p {
       font-size: 1.3rem;
-      text-overflow: ellipsis;
-
-      // display: inline-block;
-      overflow-wrap: break-word;
-      white-space: nowrap;
-      padding: 0.3em 0 0.3em 0;
+      // white-space: nowrap;
+      overflow: hidden;
+      line-height: 1.35em;
+      padding: 0.3em 0 0 0;
       color: vars.$secondary-color;
       width: 100%;
       height: 100px;
-
+    
       @media (max-width : vars.$middle) {
-          
+              
         font-size: 1rem;
-        }
+      }
     }
+
+    
+    
   }
 .slider--container__box:hover {
   background-color: orange;
