--- a/src/components/Favorites/CardFavorite/styles.scss
+++ b/src/components/Favorites/CardFavorite/styles.scss
@@ -1,14 +1,84 @@
 .card {
-  margin: 0.1rem 0.5rem;
   
-  &--button {
-    background-color: rgb(170, 22, 22);
-    width: 2rem;
-    font-size: 1.5rem;
-    border-radius: 80%;
+  &--position {
     position: relative;
-    bottom: 32rem;
-    left: 14rem;
+    .card--button {
+      // background-color: rgb(170, 22, 22);
+      // color: white;
+      // width: 2rem;
+      // font-size: 1.5rem;
+      // border: 1px solid black;
+      // border-radius: 100%;
+      // position: absolute;
+      // right: 0;
+      // margin: 0.2em 0.2em 0 0 ;
+      // z-index: 1;
+
+        
+      width: 25px;
+      height: 25px;
+      margin: 0.6em 0.6em 0.6em 0 ;
+      border: 1px solid gray;
+      z-index: 1;
+    
+      border-radius: 50% 50%;
+      position: absolute;
+      right: 0;
+      transform: scale(1.3);
+      &::before{
+          background: #888;
+          position: absolute;
+          display:block;
+          content:'';
+          width: 70%;
+          height: 6%;
+          top: 47%;
+          left: 15%;
+          transform: rotate(45deg);
+      } 
+      &::after{
+          background: #888;
+          position: absolute;
+          display:block;
+          content:'';
+          width: 6%;
+          height: 70%;
+          left: 47%;
+          top: 15%;
+          transform: rotate(45deg);
+      } 
+        
+      &:hover {
+          background: lighten(#c22, 15);
+          box-shadow: inset 0 0 5px 1px #444;
+          -webkit-transition: background .3s;
+          -moz-transition: background .9s;
+
+          &::before{
+              background: #fff;
+              box-shadow: 0px 0px 8px -1px #555;
+            }
+        &::after{
+              background: #fff;
+              box-shadow: 0px 0px 8px -1px #555;
+            }
+        }
+        }
+  }
+  
+  &--article {
+    position: relative;
+    z-index: 0;
+
+    
+
+    &__picture--favorite{
+      padding: 0.5em ;
+      border-radius: 20px;
+      width: 100%;
+      max-height: 250px;
+      margin: 2.5em auto 0;
+    }
 }
 }
 
