--- a/src/components/Cart/styles.scss
+++ b/src/components/Cart/styles.scss
@@ -5,17 +5,19 @@ width: 96vw;
 margin: auto;
 display: flex;
 flex-wrap: wrap;
-background-color: vars.$purple;
+background-color: white;
 
 @media (min-width: vars.$desktop){
-    width: 80vw;
+    width: 90vw;
     flex-wrap: nowrap;
 }
 
   &__content {
-    background-color: vars.$purple;;
+    background-color: white;
     margin: 1rem 1rem 1rem 1rem;
-    border: 0.1rem solid vars.$white;
+    
+
+    // border: 0.1rem solid white;
     border-radius: 1%;
 
       @media (min-width: vars.$desktop){
@@ -24,49 +26,275 @@ background-color: vars.$purple;
 
     &__head {
       display: flex;
-      justify-content: space-between;
+      // justify-content: space-between;
       align-items: baseline;
-      border-bottom: 0.1rem solid vars.$secondary-color;
+      // border-bottom: 0.1rem solid vars.$secondary-color;
       margin: 1rem 1rem 1rem 1rem;
       &__title {
         font-size: 1.5rem;
-        color: white;
+        color: black;
       }
       &__price {
-        color: white;
+        position: relative;
+        color: black;
+        left: 52%;
       }
       }
-
-      
 
       
   }
 
   &__article {
+      box-shadow: 1px 1px 4px black;
+      border-radius: 10px;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      margin: 0.5rem 0.5rem 0.5rem 0.5rem;
-      padding: 1rem 0rem 1rem 0rem;
-      border-bottom: 0.1rem solid vars.$secondary-color;
-      
+      margin: 0.5rem 0.5rem 1rem 0.5rem;
+      padding: 1rem;
+      // border-bottom: 0.1rem solid vars.$secondary-color;
       &__picture {
-        width: 50%;
-        height: 50%;
-      }
+        width: 15%;
 
-      &__description {
-        width: 30%;
-        margin-left: 1rem;
+        @media (max-width: vars.$pad){
+          width: 25%;
+        }
+        @media (max-width: vars.$phone){
+          width: 35%;
+          height: 50%;
+        }
+        // height: 40%;
       }
+      &__container {
+        width: 60%;
+        @media (max-width: vars.$pad){
+          width: 50%;
+        }
+
+        // padding-left: 1em;
+        
+  
+        .carts__article__title{
+          margin-left: 1rem;
+
+        }
+  
+        .carts__article__description {
+          margin-left: 1rem;
+        }
+
+        &__cart {
+  width: 25%;
+  border: 1px solid grey;
+  border-radius: 15px;
+  // margin: 0 0 0 2*vars.$gutter;
+  padding: 0.5*vars.$gutter;
+  text-align: center;
+  max-height: 300px;
+  transition: width 0.3s linear;
+
+
+  @media (min-width : vars.$large) {
+    width: 30%;
+    
+  }
+
+
+  @media (max-width : vars.$middle) {
+    width: 32%;
+    margin-top: 6*vars.$gutter;
+    
+    }
+
+  @media (max-width : vars.$pad) {
+      
+    width: 80%;
+    margin: 2*vars.$gutter auto 1em;
+    transition: width 0.5s linear;
+
+        
+  }
+
+  @media (max-width : vars.$phone) {
+    width: 90%;
+  }
+  
+
+  &--title{
+    padding-top: 2*vars.$gutter;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.8em;
+  }
+
+  &--add {
+
+   margin-bottom: vars.$gutter;
+   margin-top: 2*vars.$gutter;
+    
+
+     &__click {
+       width: 25px;
+       font-weight: bold;
+     }
+     &__counter {
+
+      
+        /* Firefox */
+        -moz-appearance: textfield;
+       
+        /* Chrome */
+        &::-webkit-inner-spin-button {
+          -webkit-appearance: none;
+          margin:0;
+        }
+       
+        /* Opéra*/
+        &::-o-inner-spin-button {
+          -o-appearance: none;
+          margin: 0; 
+        }
+      
+       width: 35px;
+     }
+     &__cart{
+       margin-left: 0.7em;
+       background-color: #F0C24F;
+       width: 50%;
+       padding: 0.5em;
+       border: 1px solid grey;
+       border-radius: 4px;
+   
+
+     }
+    
+   }
+
+  }
+    
+
+        .carts__article__stock {
+          
+          margin-bottom: vars.$gutter;
+          margin-top: 2*vars.$gutter;
+  
+          &__delete__icon {
+              width: 25px;
+              font-weight: bold;
+              margin-left: 1em;           
+          }
+  
+          &__quantity {
+            display: inline-block;
+            width: 2rem;
+            text-align: center;
+             
+            
+          /* Firefox */
+          -moz-appearance: textfield;
+         
+          /* Chrome */
+          &::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin:0;
+          }
+         
+          /* Opéra*/
+          &::-o-inner-spin-button {
+            -o-appearance: none;
+            margin: 0; 
+          }
+        
+         
+          }
+  
+          &__add {
+
+             width: 25px;
+            font-weight: bold;
+            margin-right: 1em;
+            
+    
+          }
+
+          &__delete {
+            width: 25px;
+            height: 25px;
+            border: 1px solid gray;
+            display: inline-block;
+            align-items: center;
+          
+            border-radius: 50% 50%;
+            position: absolute;
+            transform: scale(1.3);
+            &::before{
+                background: #888;
+                position: absolute;
+                display:block;
+                content:'';
+                width: 70%;
+                height: 6%;
+                top: 47%;
+                left: 15%;
+                transform: rotate(45deg);
+            } 
+            &::after{
+                background: #888;
+                position: absolute;
+                display:block;
+                content:'';
+                width: 6%;
+                height: 70%;
+                left: 47%;
+                top: 15%;
+                transform: rotate(45deg);
+            } 
+              
+            &:hover {
+                background: lighten(#c22, 15);
+                box-shadow: inset 0 0 5px 1px #444;
+                -webkit-transition: background .3s;
+                -moz-transition: background .9s;
+      
+                &::before{
+                    background: #fff;
+                    box-shadow: 0px 0px 8px -1px #555;
+                  }
+              &::after{
+                    background: #fff;
+                    box-shadow: 0px 0px 8px -1px #555;
+                  }
+              }
+              
+            }
+        
+
+          
+            
+        }
+        
+        
+      }
+      
+      &__total {
+        display: flex;
+        justify-content: flex-end;
+        margin: 0rem 1rem 0.5rem 0rem;
+      }
+      
+      
 
       &__value {
-        width: 10%;
+        width: 25%;
         text-align: right;
 
-        @media (min-width: vars.$desktop4k){
+        @media (max-width: vars.$phone){
           width: 15%;
         }
+
+        // @media (min-width: vars.$desktop4k){
+        //   width: 15%;
+        // }
       }
 
       &__avalaible {
@@ -75,58 +303,13 @@ background-color: vars.$purple;
         border-radius: 5%;
       }
 
-      &__stock {
-        display: flex;
-        align-items: center;
-        background-color: white;
-        border: 1px solid black;
-        border-radius: 5%;
-
-        &__delete {
-          
-          &__icon {
-            width: 2.5rem;
-            padding: 0rem 0.2rem 0rem 0.2rem;
-          }
-  
-          &__paragraph {
-            display: none;
-          }
-        }
-
-        &__quantity {
-          background-color: white;
-          padding: 0.6rem 0.5rem 0.6rem 0.5rem;
-          border-left: 1px solid black;
-          border-right: 1px solid black;
-        }
-
-        &__add {
-          display: flex;
-          align-items: center;
-  
-          &__icon {
-            width: 2.5rem;
-            padding: 0rem 0.2rem 0rem 0.2rem;
-          }
-  
-          &__paragraph {
-            display: none;
-          }
-        }
-          
-      }
       
-      &__total {
-        display: flex;
-        justify-content: flex-end;
-        margin: 0rem 1rem 0.5rem 0rem;
-      }
 
   }
 
     &__pay {
-
+      max-height: 250px;
+      min-width: 300px;
       background-color: vars.$primary-color;
       margin: 1rem 1rem 1rem 1rem;
       padding: 0.5rem 0.5rem 0.5rem 0.5rem;
@@ -135,10 +318,10 @@ background-color: vars.$purple;
       display: flex;
       flex-direction: column;
 
-      @media (min-width: vars.$desktop){
-        width: 80%;
-        padding: 2rem 2rem 2rem 2rem;
-      }
+      // @media (min-width: vars.$desktop){
+      //   width: 80%;
+      //   padding: 2rem 2rem 2rem 2rem;
+      // }
       
           &__description {
       
@@ -147,9 +330,9 @@ background-color: vars.$purple;
           &__total {
             text-align: center;
 
-            @media (min-width: vars.$desktop){
-              padding: 2rem 0rem 2rem 0rem;
-            }
+            // @media (min-width: vars.$desktop){
+            //   padding: 2rem 0rem 2rem 0rem;
+            // }
           }
       
           &__button {
@@ -160,3 +343,4 @@ background-color: vars.$purple;
         }
     
   }
+  
