fix-CSS blank bottom page

--- a/src/components/Error/styles.scss
+++ b/src/components/Error/styles.scss
@@ -12,8 +12,8 @@ html, body {
 }
 
 .error {
-
-background-color: vars.$l-purple;
+  min-height: 200vh;
+  background-color: vars.$l-purple;
 
 
 .box {
