--- a/src/components/Articles/styles.scss
+++ b/src/components/Articles/styles.scss
@@ -2,6 +2,7 @@
 
 .articles {
   margin-top: 2rem;
+  min-height: 200vh;
   width: 80%;
   margin: 2rem auto 2rem;
   @media (max-width : vars.$pad) {
