--- a/src/components/NotFound/styles.scss
+++ b/src/components/NotFound/styles.scss
@@ -8,6 +8,7 @@
 
 
 .notfound {
+  min-height: 200vh;
 font-family: 'Calligraffitti', cursive;
  &--title {
   font-family: 'Calligraffitti', cursive;
