--- a/src/components/Contact/styles.scss
+++ b/src/components/Contact/styles.scss
@@ -7,7 +7,7 @@
   &--left {
     width: 50vw;
     padding: 3em;
-    margin: auto;
+    // margin: 0 auto;
 
     &__title {
       color: #46A1C4;
@@ -31,8 +31,12 @@
   &--right {
     width: 30vw;
     padding: 3em;
-    margin: auto;
+    // margin: 0 auto;
     margin-left: 0;
+    @media (max-width : vars.$desktop) {
+      width: 45vw;
+
+    }
 
     &--container{
       border-radius: 1em;
@@ -66,7 +70,7 @@
 
     &--left {
       width: 90vw;
-      margin: auto;
+      margin: 0 auto;
       padding: 1em;
 
       &__card {
@@ -76,7 +80,7 @@
 
     &--right {
       width: 90vw;
-      margin:auto;
+      margin: 0 auto;
       padding: 1em;
     }
   }
@@ -88,7 +92,7 @@
 
     &--left {
       width: 90vw;
-      margin: auto;
+      // margin: auto;
       padding: 1em;
 
       &__card {
@@ -98,7 +102,7 @@
 
     &--right {
       width: 90vw;
-      margin:auto;
+      // margin:auto;
       padding: 1em;
     }
   }
