--- a/src/components/Login/styles.scss
+++ b/src/components/Login/styles.scss
@@ -31,6 +31,12 @@
     }
   }
 
+  &--paragraphe {
+    padding-bottom: 1em;
+    margin: 0;
+  }
+
+
   &--button__mdp {
     color: blue;
     margin-top: 1rem;
