--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -26,6 +26,7 @@ min-height: 200vh;
       text-transform: capitalize;
       font-size: 2.5em;
       color: vars.$secondary-color;
+      padding-bottom: 1em;
     
     }
     
@@ -44,6 +45,7 @@ min-height: 200vh;
       width: 100%;
       border-top: 3px solid vars.$main-color;
       padding-top: 1em;
+      padding-bottom: 1em;
       text-align: center;
       text-transform: capitalize;
       font-size: 2.5em;
