--- a/src/components/Article/ListArticle/style.scss
+++ b/src/components/Article/ListArticle/style.scss
@@ -55,10 +55,16 @@
         }
       }
 
+    &--price {
+      padding: 0 1em 0.5em;
+      margin: auto;
+      color: vars.$secondary-color;
+      font-size: 40px;
+      font-weight: bold;
+    }
+
         
     p {
-      font-size: 1.3rem;
-      // white-space: nowrap;
       overflow: hidden;
       line-height: 1.35em;
       padding: 0.3em 0 0 0;
