--- a/src/components/NotFound/styles.scss
+++ b/src/components/NotFound/styles.scss
@@ -8,7 +8,7 @@
 
 
 .notfound {
-  min-height: 200vh;
+  height: 100%;
 font-family: 'Calligraffitti', cursive;
  &--title {
   font-family: 'Calligraffitti', cursive;
