--- a/src/components/Cart/styles.scss
+++ b/src/components/Cart/styles.scss
@@ -2,27 +2,33 @@
 
 .carts {
 width: 96vw;
-min-height: 200vh;
+height: 100%;
 margin: auto;
 display: flex;
 flex-wrap: wrap;
 background-color: white;
 
-@media (min-width: vars.$desktop){
+@media (max-width: vars.$desktop){
     width: 90vw;
-    flex-wrap: nowrap;
+    height: 100%;
+    margin-bottom: 4em;
+    // flex-wrap: nowrap;
 }
+
 
   &__content {
     background-color: white;
     margin: 1rem 1rem 1rem 1rem;
+    width: 60%;
     
 
     // border: 0.1rem solid white;
     border-radius: 1%;
 
-      @media (min-width: vars.$desktop){
-        width: 200%;
+      @media (max-width: vars.$pad){
+        margin-bottom: 5em;
+        width: 100%;
+        
       }
 
     &__head {
@@ -54,30 +60,51 @@ background-color: white;
       justify-content: space-between;
       margin: 0.5rem 0.5rem 1rem 0.5rem;
       padding: 1rem;
+
+      @media (max-width: vars.$padCart){
+        display: block;
+      }
       // border-bottom: 0.1rem solid vars.$secondary-color;
       &__picture {
         width: 15%;
 
-        @media (max-width: vars.$pad){
-          width: 25%;
+        @media(max-width: vars.$desktop4k) {
+        width: 20%;  
         }
-        @media (max-width: vars.$phone){
+
+        @media (max-width: vars.$desktop) {
           width: 35%;
-          height: 50%;
+          height: 70%;
         }
-        // height: 40%;
+        @media (max-width: vars.$padCart){
+          width: 50%;
+          display: block;
+          margin: auto;
+          text-align: center;
+        }
+
+        
       }
       &__container {
         width: 60%;
-        @media (max-width: vars.$pad){
-          width: 50%;
+        @media (max-width: vars.$desktop){
+          width: 55%;
         }
-
-        // padding-left: 1em;
+        @media (max-width: vars.$padCart){
+          width: 80%;
+          margin: auto;
+        }
+        
         
   
         .carts__article__title{
           margin-left: 1rem;
+          text-transform: capitalize;
+          padding-top: 1em;
+
+          @media (max-width: vars.$padCart){
+            text-align: center;
+          }
 
         }
   
@@ -86,86 +113,86 @@ background-color: white;
         }
 
         &__cart {
-  width: 25%;
-  border: 1px solid grey;
-  border-radius: 15px;
-  // margin: 0 0 0 2*vars.$gutter;
-  padding: 0.5*vars.$gutter;
-  text-align: center;
-  max-height: 300px;
-  transition: width 0.3s linear;
+          width: 25%;
+          border: 1px solid grey;
+          border-radius: 15px;
+          // margin: 0 0 0 2*vars.$gutter;
+          padding: 0.5*vars.$gutter;
+          text-align: center;
+          max-height: 300px;
+          transition: width 0.3s linear;
 
 
-  @media (min-width : vars.$large) {
-    width: 30%;
+            @media (min-width : vars.$large) {
+              width: 30%;
     
-  }
+            }
 
 
-  @media (max-width : vars.$middle) {
-    width: 32%;
-    margin-top: 6*vars.$gutter;
+            @media (max-width : vars.$middle) {
+              width: 32%;
+              margin-top: 6*vars.$gutter;
     
-    }
+              }
 
-  @media (max-width : vars.$pad) {
-      
-    width: 80%;
-    margin: 2*vars.$gutter auto 1em;
-    transition: width 0.5s linear;
+            @media (max-width : vars.$pad) {
+                
+              width: 80%;
+              margin: 2*vars.$gutter auto 1em;
+              transition: width 0.5s linear;
 
         
-  }
+            }
 
-  @media (max-width : vars.$phone) {
-    width: 90%;
-  }
+            @media (max-width : vars.$phone) {
+              width: 90%;
+            }
   
 
-  &--title{
-    padding-top: 2*vars.$gutter;
-    text-align: center;
-    font-weight: bold;
-    font-size: 1.8em;
-  }
+            &--title{
+              padding-top: 2*vars.$gutter;
+              text-align: center;
+              font-weight: bold;
+              font-size: 1.8em;
+            }
 
-  &--add {
+            &--add {
 
-   margin-bottom: vars.$gutter;
-   margin-top: 2*vars.$gutter;
+             margin-bottom: vars.$gutter;
+             margin-top: 2*vars.$gutter;
     
 
-     &__click {
-       width: 25px;
-       font-weight: bold;
-     }
-     &__counter {
-
+            &__click {
+              width: 25px;
+              font-weight: bold;
+            }
+            &__counter {
+            
       
-        /* Firefox */
-        -moz-appearance: textfield;
+               /* Firefox */
+               -moz-appearance: textfield;
        
-        /* Chrome */
-        &::-webkit-inner-spin-button {
-          -webkit-appearance: none;
-          margin:0;
-        }
+               /* Chrome */
+               &::-webkit-inner-spin-button {
+                 -webkit-appearance: none;
+                 margin:0;
+               }
        
-        /* Opéra*/
-        &::-o-inner-spin-button {
-          -o-appearance: none;
-          margin: 0; 
-        }
+              /* Opéra*/
+              &::-o-inner-spin-button {
+                -o-appearance: none;
+                margin: 0; 
+              }
       
-       width: 35px;
-     }
-     &__cart{
-       margin-left: 0.7em;
-       background-color: #F0C24F;
-       width: 50%;
-       padding: 0.5em;
-       border: 1px solid grey;
-       border-radius: 4px;
+              width: 35px;
+            }
+              &__cart{
+              margin-left: 0.7em;
+              background-color: #F0C24F;
+              width: 50%;
+              padding: 0.5em;
+              border: 1px solid grey;
+              border-radius: 4px;
    
 
      }
@@ -270,9 +297,6 @@ background-color: white;
               
             }
         
-
-          
-            
         }
         
         
@@ -289,14 +313,15 @@ background-color: white;
       &__value {
         width: 25%;
         text-align: right;
+        @media (max-width: vars.$desktop4k){
+          margin-top: 1em;
+        }
 
         @media (max-width: vars.$phone){
           width: 15%;
         }
 
-        // @media (min-width: vars.$desktop4k){
-        //   width: 15%;
-        // }
+        
       }
 
       &__avalaible {
@@ -311,19 +336,20 @@ background-color: white;
 
     &__pay {
       max-height: 250px;
-      min-width: 300px;
+      width: 30%;
       background-color: vars.$primary-color;
-      margin: 3rem 1rem 1rem 1rem;
-      padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+      margin: 3rem auto 1rem;
+      padding: 3rem 0.5rem 0.5rem 0.5rem;
       border: 0.1rem solid vars.$secondary-color;
-      border-radius: 1%;
+      border-radius: 15px;
       display: flex;
       flex-direction: column;
 
-      // @media (min-width: vars.$desktop){
-      //   width: 80%;
-      //   padding: 2rem 2rem 2rem 2rem;
-      // }
+      @media (max-width: vars.$pad){
+        width: 80%;
+        padding: 2rem;
+        margin: 0 auto 4rem;
+      }
       
           &__description {
       
@@ -332,9 +358,7 @@ background-color: white;
           &__total {
             text-align: center;
 
-            // @media (min-width: vars.$desktop){
-            //   padding: 2rem 0rem 2rem 0rem;
-            // }
+            
           }
       
           &__button {
