--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -16,6 +16,7 @@ $gutter: 1rem;
 $desktop4k: 1440px;
 $desktop: 1024px;
 $phone: 450px;
-$pad: 750px;
+$padCart: 700px;
+$pad: 769px;
 $middle: 950px;
 $large: 1800px;
