--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,4 +2,23 @@
 @use 'vars';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 body {
-  font-family: 'Roboto', sans-serif;}
+  font-family: 'Roboto', sans-serif;
+  height: auto;
+  scrollbar-width: thin;
+  scrollbar-color: white vars.$secondary-color;}
+
+
+/* Works on Chrome, Edge, and Safari */
+body::-webkit-scrollbar {
+  width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+  background: vars.$secondary-color;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 20px;
+  border: 3px solid vars.$secondary-color;
+}
