--- a/src/components/Cart/CardCart/style.scss
+++ b/src/components/Cart/CardCart/style.scss
@@ -1,36 +1,43 @@
-.carts__article {
-  &__picture {
-    border-radius: 15px;
+@use 'src/styles/vars';
 
-  }
-  &__container {
+// .carts__article {
 
-    .carts__article__title {
-      font-size: 1.2em;
-      font-weight: bold;
-      padding-bottom: 1em;
+//   &__picture {
+//     border-radius: 15px;
 
-    }
-  }
+//   }
+//   &__container {
+    
+//     .carts__article__title {
+//       font-size: 1.2em;
+//       font-weight: bold;
+//       padding-bottom: 1em;
+//       // @media (max-width: vars.$desktop) {
+//       //   font-size: 1em;
 
-  &__stock {
+//       // }
+      
+//     }
+//   }
+
+//   &__stock {
    
-    &__delete {
-      &__icon {
+//     &__delete {
+//       &__icon {
 
-      }
-    }
+//       }
+//     }
 
-    &__quantity {
+//     &__quantity {
 
-    }
-    &__add {
-      &__icon {
-        img{
+//     }
+//     &__add {
+//       &__icon {
+//         img{
           
-        }
+//         }
 
-      }
-    }
-  }
-}
+//       }
+//     }
+//   }
+// }
