CSS fix profile & cart

--- a/src/components/Cart/styles.scss
+++ b/src/components/Cart/styles.scss
@@ -357,6 +357,7 @@ background-color: white;
       
           &__total {
             text-align: center;
+            margin-bottom: 1em;
 
           }
       
