--- a/src/components/Profile/styles.scss
+++ b/src/components/Profile/styles.scss
@@ -16,18 +16,17 @@
   &--container {
     border:1px solid grey;
     border-radius: 2rem;
-    margin: 0 auto 2em;
-    margin-top: 2rem;
+    margin: 2rem auto 2em;
     display: flex;
     width: 30rem;
 
     @media (max-width: vars.$pad) { 
-      margin-top: 2rem;
+      margin: 2rem auto 2em;
       width: 25rem;
      }
 
      @media (max-width: vars.$phone) { 
-      margin-top: 2rem;
+      margin: 2rem auto 2em;
       width: 20rem;
      }
   }
