--- a/src/components/Cart/styles.scss
+++ b/src/components/Cart/styles.scss
@@ -101,6 +101,9 @@ background-color: white;
           margin-left: 1rem;
           text-transform: capitalize;
           padding-top: 1em;
+          padding-bottom: 1em;
+          font-weight: bold;
+          font-size: 1.5em;
 
           @media (max-width: vars.$padCart){
             text-align: center;
