--- a/src/components/Error/styles.scss
+++ b/src/components/Error/styles.scss
@@ -12,23 +12,18 @@ html, body {
 }
 
 .error {
+  max-width: 100%;
   height: 100%;
   background-color: vars.$l-purple;
 
 
 .box {
-  // margin: 2rem 0;
-  width: 350px;
   height: 100vh;
   margin:auto;
-  // max-height: 600px;
-  // min-height: 450px;
   background: vars.$l-purple;
   border-radius: 20px;
   position: relative;
-  // left: 50%;
-  // transform: translate(-50%, -50%);
-  padding: 5rem;
+  padding: 4rem;
   
   .box__ghost {
     padding: 25px 25px 25px;
